--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Midterm Repository</title>
 </head>
 <body>
-    
+    <h1>Facebook in society</h1>
+    <h2>Facebook is Getting people Together</h2>  
+    <img src="img/facebook_is_good.jpg" alt="facebook is good">
+    <p> Facebook is helpful for those who are not able to communicate verbally. 
+        This is a great way for the deaf or dumb to meet new people as well as meet people 
+        with their disabilities. In addition, the writer did not consider it easier for those who 
+        spare their time to convey with others without being near them. So, this is the reason 
+        that why social media is advantageous.
+        Next, it states that this application of social networking promotes poor communication 
+        and friendship skills because Facebook has become universal which allows to 
+        everybody to contact or make friendships with another people in the whole world. This 
+        breaks down the communication barriers that can only be done with a universal 
+        network like this and permits to connect with others if you were traveling. The novelist 
+        does not consider that it can reunite you with your old friends that you may have lost 
+        touch with.</p>
 </body>
 </html>
