--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Midterm Repository</title>
+</head>
+<body>
+    <h2>Facebook Is Killing Society</h2>
+    <img src="images/facebook is killing society.jpg" alt="facebook is killing society">
+    <p>Paradoxically, Facebook changes and impacts social relationships along with 
+    people's ideas, thoughts, and actions. There are several negative effects that it has 
+    on the society. It causes addiction which results in less social interaction, leads to 
+    health issues and distraction from another tasks. Recent data shows that it has 
+    number of users around world. This seems to be more escape website from real life 
+    to a life where everything is fine and organized. It impacts badly on teen's mental 
+    health because they are not aware how to use these websites. For instance, the 
+    Facebook associated the excessive usage by youngsters presently which causes 
+    various harms such as insomnia, depression, anxiety and many more. Furthermore, 
+    the overuse of this application might lead to suicide besides teens spend most their 
+    time on it by making friends and cause obesity as they spare most of the time in front
+    of computers and smartphones</p>
+</body>
+</html>
 
