--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Facebook in society</h1>
+    
+    <section>
     <h2>Facebook Is Killing Society</h2>
     <img src="images/facebook is killing society.jpg" alt="facebook is killing society">
     <p>Paradoxically, Facebook changes and impacts social relationships along with 
@@ -16,11 +18,11 @@
     the overuse of this application might lead to suicide besides teens spend most their 
     time on it by making friends and cause obesity as they spare most of the time in front
     of computers and smartphones</p>
+    </section>
 </body>
 </html>
 
-
-    
+<section>
     <h2>Facebook is Getting people Together</h2>  
     <img src="img/facebook_is_good.jpg" alt="facebook is good">
     <p> Facebook is helpful for those who are not able to communicate verbally. 
@@ -35,6 +37,7 @@
         network like this and permits to connect with others if you were traveling. The novelist 
         does not consider that it can reunite you with your old friends that you may have lost 
         touch with.</p>
+        </section>
 </body>
 </html>
 
